working implementations of /meetup/{id}/attendee, modified PATCH to also take in an attendee id
