# server/models/patch_meetup_attendee_body.go
@@ -1,0 +1,72 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PatchMeetupAttendeeBody patch meetup attendee body
+//
+// swagger:model patchMeetupAttendeeBody
+type PatchMeetupAttendeeBody struct {
+
+	// attendee
+	Attendee string `json:"attendee,omitempty"`
+
+	// attendee status
+	AttendeeStatus AttendeeStatus `json:"attendeeStatus,omitempty"`
+}
+
+// Validate validates this patch meetup attendee body
+func (m *PatchMeetupAttendeeBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAttendeeStatus(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PatchMeetupAttendeeBody) validateAttendeeStatus(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.AttendeeStatus) { // not required
+		return nil
+	}
+
+	if err := m.AttendeeStatus.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("attendeeStatus")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PatchMeetupAttendeeBody) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PatchMeetupAttendeeBody) UnmarshalBinary(b []byte) error {
+	var res PatchMeetupAttendeeBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
